// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChipsLayout /> should render with one chip 1`] = `
<ChipLayout
  handleMoreButton={[Function]}
  invertMoreButton={false}
  maxRows={2}
  moreLabel="more"
  pathname=""
>
  <div
    className="tss-npcfqg-container engage__chip-layout"
  >
    <div
      className="tss-741rda-layout"
    >
      <Chip
        editLabel={null}
        id="some-id"
        invert={false}
        onClick={[Function]}
        onRemove={[Function]}
        removable={true}
        removeLabel={null}
      >
        <div
          className="ui-shared__chip css-151hpn9"
          data-test-id="some-id"
        >
          <Button
            aria-label={null}
            className="css-39vnpz"
            disabled={false}
            onClick={[Function]}
            testId="removeFilter"
          >
            <button
              aria-label={null}
              className="css-39vnpz tss-16c9pag-root common__button"
              data-test-id="removeFilter"
              disabled={false}
              onClick={[Function]}
            >
              <ResponsiveContainer
                appAlways={true}
                appOnly={false}
                breakpoint="<=xs"
                webAlways={false}
                webOnly={false}
              >
                <Cross
                  size={16}
                >
                  <Icon
                    content="<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>"
                    size={16}
                  >
                    <svg
                      className="tss-1n8b10t-root common__icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": "<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>",
                        }
                      }
                      style={
                        {
                          "fill": undefined,
                          "fontSize": 16,
                        }
                      }
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </Icon>
                </Cross>
              </ResponsiveContainer>
              <ResponsiveContainer
                appAlways={false}
                appOnly={false}
                breakpoint=">xs"
                webAlways={false}
                webOnly={true}
              />
            </button>
          </Button>
          <Button
            aria-label={null}
            className="css-hb5pev"
            disabled={false}
            onClick={[Function]}
            testId="Button"
          >
            <button
              aria-label={null}
              className="css-hb5pev tss-16c9pag-root common__button"
              data-test-id="Button"
              disabled={false}
              onClick={[Function]}
            >
              foo
            </button>
          </Button>
        </div>
      </Chip>
    </div>
    <div
      className="tss-1l5tw3l-moreButtonWrapper"
    >
      <RippleButtonWithStyles
        className="tss-jtmjaa-moreButton"
        disabled={false}
        fill={true}
        flat={false}
        onClick={[Function]}
        rippleClassName=""
        rippleSize={null}
        testId="Button"
        type="plain"
        wrapContent={true}
      >
        <RippleButton
          className="tss-jtmjaa-moreButton"
          classes={
            {
              "contentWrapper": "tss-p1t6ie-RippleButton-contentWrapper",
            }
          }
          disabled={false}
          fill={true}
          flat={false}
          onClick={[Function]}
          rippleClassName=""
          rippleSize={null}
          testId="Button"
          type="plain"
          wrapContent={true}
        >
          <Button
            className="tss-jtmjaa-moreButton ui-shared__ripple-button"
            disabled={false}
            flat={false}
            onClick={[Function]}
            testId="Button"
            type="plain"
            wrapContent={false}
          >
            <Button
              className="ui-shared__button css-1xxwysr tss-jtmjaa-moreButton ui-shared__ripple-button"
              disabled={false}
              onClick={[Function]}
              testId="Button"
              type="button"
            >
              <button
                className="ui-shared__button css-1xxwysr tss-jtmjaa-moreButton ui-shared__ripple-button tss-16c9pag-root common__button"
                data-test-id="Button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <RippleWithStyles
                  className="tss-p1t6ie-RippleButton-contentWrapper "
                  fill={true}
                  overflow={true}
                  size={null}
                >
                  <Ripple
                    className="tss-p1t6ie-RippleButton-contentWrapper "
                    classes={
                      {
                        "container": "tss-1dfkr3n-Ripple-container",
                      }
                    }
                    color="#000"
                    disabled={false}
                    fill={true}
                    onClick={[Function]}
                    onComplete={[Function]}
                    overflow={true}
                    size={null}
                  >
                    <div
                      className="ui-shared__ripple tss-p1t6ie-RippleButton-contentWrapper "
                      data-test-id="Ripple"
                      onClick={[Function]}
                      style={null}
                    >
                      <Translate
                        acceptPlainTextWithPlaceholders={false}
                        className={null}
                        params={{}}
                        role={null}
                        string="more"
                        transform={null}
                      >
                        <span
                          className={null}
                          role={null}
                        >
                          more
                        </span>
                      </Translate>
                    </div>
                  </Ripple>
                </RippleWithStyles>
              </button>
            </Button>
          </Button>
        </RippleButton>
      </RippleButtonWithStyles>
    </div>
  </div>
</ChipLayout>
`;

exports[`<ChipsLayout /> should render with two chips 1`] = `
<ChipLayout
  handleMoreButton={[Function]}
  invertMoreButton={false}
  maxRows={2}
  moreLabel="more"
  pathname=""
>
  <div
    className="tss-npcfqg-container engage__chip-layout"
  >
    <div
      className="tss-741rda-layout"
    >
      <Chip
        editLabel={null}
        id="some-id"
        invert={false}
        onClick={[Function]}
        onRemove={[Function]}
        removable={true}
        removeLabel={null}
      >
        <div
          className="ui-shared__chip css-151hpn9"
          data-test-id="some-id"
        >
          <Button
            aria-label={null}
            className="css-39vnpz"
            disabled={false}
            onClick={[Function]}
            testId="removeFilter"
          >
            <button
              aria-label={null}
              className="css-39vnpz tss-16c9pag-root common__button"
              data-test-id="removeFilter"
              disabled={false}
              onClick={[Function]}
            >
              <ResponsiveContainer
                appAlways={true}
                appOnly={false}
                breakpoint="<=xs"
                webAlways={false}
                webOnly={false}
              >
                <Cross
                  size={16}
                >
                  <Icon
                    content="<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>"
                    size={16}
                  >
                    <svg
                      className="tss-1n8b10t-root common__icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": "<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>",
                        }
                      }
                      style={
                        {
                          "fill": undefined,
                          "fontSize": 16,
                        }
                      }
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </Icon>
                </Cross>
              </ResponsiveContainer>
              <ResponsiveContainer
                appAlways={false}
                appOnly={false}
                breakpoint=">xs"
                webAlways={false}
                webOnly={true}
              />
            </button>
          </Button>
          <Button
            aria-label={null}
            className="css-hb5pev"
            disabled={false}
            onClick={[Function]}
            testId="Button"
          >
            <button
              aria-label={null}
              className="css-hb5pev tss-16c9pag-root common__button"
              data-test-id="Button"
              disabled={false}
              onClick={[Function]}
            >
              foo
            </button>
          </Button>
        </div>
      </Chip>
      <Chip
        editLabel={null}
        id="some-other-id"
        invert={false}
        onClick={[Function]}
        onRemove={[Function]}
        removable={true}
        removeLabel={null}
      >
        <div
          className="ui-shared__chip css-151hpn9"
          data-test-id="some-other-id"
        >
          <Button
            aria-label={null}
            className="css-39vnpz"
            disabled={false}
            onClick={[Function]}
            testId="removeFilter"
          >
            <button
              aria-label={null}
              className="css-39vnpz tss-16c9pag-root common__button"
              data-test-id="removeFilter"
              disabled={false}
              onClick={[Function]}
            >
              <ResponsiveContainer
                appAlways={true}
                appOnly={false}
                breakpoint="<=xs"
                webAlways={false}
                webOnly={false}
              >
                <Cross
                  size={16}
                >
                  <Icon
                    content="<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>"
                    size={16}
                  >
                    <svg
                      className="tss-1n8b10t-root common__icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": "<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>",
                        }
                      }
                      style={
                        {
                          "fill": undefined,
                          "fontSize": 16,
                        }
                      }
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </Icon>
                </Cross>
              </ResponsiveContainer>
              <ResponsiveContainer
                appAlways={false}
                appOnly={false}
                breakpoint=">xs"
                webAlways={false}
                webOnly={true}
              />
            </button>
          </Button>
          <Button
            aria-label={null}
            className="css-hb5pev"
            disabled={false}
            onClick={[Function]}
            testId="Button"
          >
            <button
              aria-label={null}
              className="css-hb5pev tss-16c9pag-root common__button"
              data-test-id="Button"
              disabled={false}
              onClick={[Function]}
            >
              bar
            </button>
          </Button>
        </div>
      </Chip>
    </div>
    <div
      className="tss-1l5tw3l-moreButtonWrapper"
    >
      <RippleButtonWithStyles
        className="tss-jtmjaa-moreButton"
        disabled={false}
        fill={true}
        flat={false}
        onClick={[Function]}
        rippleClassName=""
        rippleSize={null}
        testId="Button"
        type="plain"
        wrapContent={true}
      >
        <RippleButton
          className="tss-jtmjaa-moreButton"
          classes={
            {
              "contentWrapper": "tss-p1t6ie-RippleButton-contentWrapper",
            }
          }
          disabled={false}
          fill={true}
          flat={false}
          onClick={[Function]}
          rippleClassName=""
          rippleSize={null}
          testId="Button"
          type="plain"
          wrapContent={true}
        >
          <Button
            className="tss-jtmjaa-moreButton ui-shared__ripple-button"
            disabled={false}
            flat={false}
            onClick={[Function]}
            testId="Button"
            type="plain"
            wrapContent={false}
          >
            <Button
              className="ui-shared__button css-1xxwysr tss-jtmjaa-moreButton ui-shared__ripple-button"
              disabled={false}
              onClick={[Function]}
              testId="Button"
              type="button"
            >
              <button
                className="ui-shared__button css-1xxwysr tss-jtmjaa-moreButton ui-shared__ripple-button tss-16c9pag-root common__button"
                data-test-id="Button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <RippleWithStyles
                  className="tss-p1t6ie-RippleButton-contentWrapper "
                  fill={true}
                  overflow={true}
                  size={null}
                >
                  <Ripple
                    className="tss-p1t6ie-RippleButton-contentWrapper "
                    classes={
                      {
                        "container": "tss-1dfkr3n-Ripple-container",
                      }
                    }
                    color="#000"
                    disabled={false}
                    fill={true}
                    onClick={[Function]}
                    onComplete={[Function]}
                    overflow={true}
                    size={null}
                  >
                    <div
                      className="ui-shared__ripple tss-p1t6ie-RippleButton-contentWrapper "
                      data-test-id="Ripple"
                      onClick={[Function]}
                      style={null}
                    >
                      <Translate
                        acceptPlainTextWithPlaceholders={false}
                        className={null}
                        params={{}}
                        role={null}
                        string="more"
                        transform={null}
                      >
                        <span
                          className={null}
                          role={null}
                        >
                          more
                        </span>
                      </Translate>
                    </div>
                  </Ripple>
                </RippleWithStyles>
              </button>
            </Button>
          </Button>
        </RippleButton>
      </RippleButtonWithStyles>
    </div>
  </div>
</ChipLayout>
`;
